--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    font-family: 'Modak', cursive;
+    font-family: 'Epilogue', sans-serif;
     /* sticky footer recipe */
     min-height: 100vh;
     display: flex;
