--- a/css/style.css
+++ b/css/style.css
@@ -6,18 +6,19 @@
 body {
     font-family: 'Epilogue', sans-serif;
     /* sticky footer recipe */
-    min-height: 100vh;
     display: flex;
+    min-height: 100vh;
     flex-direction: column;
 }
 
 main {
     /* sticky footer recipe cont'd */
-    flex-grow: 1;
+    flex: 1 0 auto;
 }
 
 #input-junk {
     justify-content: space-evenly;
+    margin: 10rem;
 }
 
 #navigation {
