added styling to hide table upon page load

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@ main {
     flex: 1 0 auto;
 }
 
+#art-table {
+    display: hidden;
+}
+
 #input-junk {
     justify-content: space-evenly;
     margin: 10rem;
